# ComfyUI-SP-Nodes

./: README.md  __init__.py  config.ini  config.py  node_list.json  pyproject.toml  requirements.txt  server.py
nodes/: SD3Multiply.py  civitai_prompts.py  custom_checkpoint_save.py  debug_logger.py  dynamic_combo.py  face_scatter.py  flux_fast_merge_patch_fp8.py  image_monitor.py  inject_noise_hook_impact_pack.py  inspire_lbw_batch.py  intelligent_cache.py  kobald_cpp.py  latent_saveload.py  merging.py  model_names.py  nodes.py  passthrough.py  pipes.py  preview_image_webp.py  sp_hiresgen.py  sp_websocket_send_image.py
nodes/group_nodes/: FluxLoader.py  Graph.py  SP_FlorenceCaption.py  SP_FluxUnsampler.py  SUPIR.py  pipes.py
nodes/prompt_checker/: prompt_checker.py  wildcards.py
web/: dynamic_combo.js  impact_switch_combo.js  pipes_sync.js  sp_pass.js
web/js/: group_nodes.js  handle_suggestions_optional_inputs.js  impact-pack-wildcards.js  lora_loader.js  nodesorter.core.js  prompt_checker.js
